test/errors/undefined_variable.dm
3 + my_undefined_var * 9

--- Output
Undefined variable

1| 3 + my_undefined_var * 9
       ^^^^^^^^^^^^^^^^
---
